--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
-
+    <link rel="icon" href="images/favicon.ico">
     <title>Asterios Koutoulidis</title>
   </head>
   <body>
