--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
-    <link rel="icon" href="../src/assets/images/favicon.ico">
+    <link rel="icon" type="icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+
     <title>Asterios Koutoulidis</title>
   </head>
   <body>
